resolved css & html issues

--- a/index.html
+++ b/index.html
@@ -4,24 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AJAX Project</title>
+  <link href="https://fonts.googleapis.com/css2?family=Pridi:wght@200;700&display=swap" rel="stylesheet">
   <link rel="icon" href="images/favicon.ico">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/layout.css">
   <link rel="stylesheet" href="css/styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Pridi:wght@200;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
   <header>
     <div class="header">
-      <div id="head">Harry Potter Characters</div>
-      <div id="main-nav">FAVORITES</div>
+      <div class="head">Harry Potter Characters</div>
+      <div class="main-nav">FAVORITES</div>
       </div>
   </header>
   <main>
 
     <div data-view="front" id="frontview">
       <div class="sort-row">
-      <select name="house" id="house">
+      <select name="house" class="house">
         <option value="none" selected disabled hidden>House Filter</option>
         <option value="gryffindor">Gryffindor</option>
         <option value="slytherin">Slytherin</option>
