completed filtering by house

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
     <div data-view="front" id="frontview">
       <div class="sort-row">
-      <select name="house" class="house">
-        <option value="none" selected disabled hidden>House Filter</option>
-        <option value="gryffindor">Gryffindor</option>
-        <option value="slytherin">Slytherin</option>
-        <option value="ravenclaw">Ravenclaw</option>
-        <option value="hufflepuff">Hufflepuff</option>
-        <option value="noHouse">None</option>
+      <select id="dropDown" name="house" class="house">
+        <option value="All" selected>All</option>
+        <option value="Gryffindor">Gryffindor</option>
+        <option value="Slytherin">Slytherin</option>
+        <option value="Ravenclaw">Ravenclaw</option>
+        <option value="Hufflepuff">Hufflepuff</option>
+        <option value="">None</option>
       </select>
       </div>
 
