--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <div id="dYear">Year of Birth: 1980</div>
         <div id="dWiz">Wizard: True</div>
         <div id="dHouse">House Gryffindor</div>
-        <i id="heart" class="fa fa-heart-o"></i>
-        <div id="fav">Favorite</div>
+        <i class="heart fa fa-heart-o"></i>
+        <div class="fav">Favorite</div>
       </div>
     </div>
 
