completed all features

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header>
     <div class="header">
       <div class="head">Harry Potter Characters</div>
-      <div class="main-nav">FAVORITE</div>
+      <div class="main-nav">FAVORITES</div>
     </div>
   </header>
   <main>
@@ -35,8 +35,8 @@
         <div id="dYear">Year of Birth: 1980</div>
         <div id="dWiz">Wizard: True</div>
         <div id="dHouse">House Gryffindor</div>
-        <i class="heart fa fa-heart-o"></i>
-        <div class="fav">Favorite</div>
+        <i class="heart detailUHeart fa fa-heart-o"></i>
+        <div class="fav">FAVORITE</div>
       </div>
     </div>
 
@@ -68,7 +68,6 @@
 
 
   </main>
-  <script src="js/data.js"></script>
-  <script src="js/main.js"></script>
+  <script src="js/new.js"></script>
 </body>
 </html>
